@@ -4,20 +4,22 @@ import com.example.demoweb.model.Post;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Date;
 import java.util.List;
 
 @Service
 public class PostService {
-    List<Post> posts = new ArrayList<>();
+    static List<Post> posts = new ArrayList<>();
 
+    public void create(String text) {
+        posts.add(new Post(text, new Date()));
+    }
     public List<Post> listAllPosts(){
-        if (posts.size() >= 3){
-            return posts.subList(0, 2);
+        if (posts.size() > 0){
+            return posts;
         }
         else{
-            return Arrays.asList(new Post("no posts"), new Post("еще no posts"),
-                    new Post("и еще no posts"));
+            return List.of(new Post("no posts"));
         }
     }
 }
